# cmake-multiple-example-research

./: CMakeLists.txt  README.md  main.c
cmake/: multipleConfig.cmake
hosted/: boot.c
test/: CMakeLists.txt  user.c
x86/: link.ld  multipleTargets-x86.cmake  start.s  text.c
