project(multiple C)
add_library(lib STATIC)
target_sources(lib PRIVATE main.c)
if (LIB_TARGET STREQUAL "x86")
  enable_language(ASM)
  target_sources(lib PRIVATE x86/boot.s x86/text.c)
elseif (LIB_TARGET STREQUAL "hosted")
  target_sources(lib PRIVATE hosted/boot.c)
else ()
  message(FATAL_ERROR "No LIB_TARGET specified")
endif ()
